# qt-music-player

./: CMakeLists.txt  LICENSE  PlayerControl.cpp  PlayerControl.h  PlaylistItem.cpp  PlaylistItem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
